--- a/frontend/src/components/Modals/Search.css
+++ b/frontend/src/components/Modals/Search.css
@@ -18,8 +18,8 @@
     opacity: 1;
   }
   
-  .modal-search::after {
-    content: "";
+  .modal-overlay{
+  
     width: 100%;
     height: 100%;
     background-color: black;
